// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`number should fail to parse non-numbers 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "number",
    "path": [],
    "received": "string",
  },
]
`;

exports[`number should not parse -Infinity 1`] = `
[
  {
    "code": "is_infinite",
    "path": [],
  },
]
`;

exports[`number should not parse Infinity 1`] = `
[
  {
    "code": "is_infinite",
    "path": [],
  },
]
`;

exports[`number should not parse a NaN 1`] = `
[
  {
    "code": "is_nan",
    "path": [],
  },
]
`;
